<resources>
    <dimen name="line_padding">6dp</dimen>
    <string name="app_name">Women\'s Calendar</string>
    <string name="init_rus">Синхронизация…</string>
    <string name="btn_poll_next">Далее</string>
    <string name="btn_poll_dnt_remember">Не помню</string>
    <string name="today">Сегодня</string>
    <string name="calendar">Календарь</string>
    <string name="information">Заметки</string>
    <string name="more">Еще</string>
    <string name="new_date_text_menu">Изменить даты месячных</string>
    <string name="text_press_last_menstruation">Добавьте даты прошлых месячных</string>
    <string name="text_duration_of_menstruation">Продолжительность цикла и месячных</string>
    <string name="text_avg_length_of_menstruation">Средняя длительность месячных</string>
    <string name="text_avg_length_of_cycle">Средняя длительность цикла</string>
    <string name="text_today_menu">Сегодня</string>
    <string name="date_of_note">Дата заметки</string>


    <string-array name="poll_texts">

        <item name="when_start_days0">Когда начались ваши последние \n месячные?</item>
        <item name="when_start_days1">Сколько в среднем у вас \n идут месячные?</item>
        <item name="how_long_days">Сколько в среднем у вас идут \n месячные?</item>
        <item name="year_of_birth">Прогнозы будут, если вы укажите ваш \n год рождения?</item>
            
    </string-array>

    <string name="step_poll">Шаг %1$d из 4 </string>
    <string name="poll_init">Делаем прогнозы \n циклов...</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="quiz_questions">
        <item>Когда начались ваши последние \n месячные?</item>
        <item>Сколько в среднем у вас идут \n месячные?</item>
        <item>Сколько в среднем длится \n ваш цикл?</item>
        <item>Прогнозы будут, если вы укажите ваш \n год рождения</item>
    </string-array>

    //for WeekModeCalendarFragment
    <string name="menstruation_after">Менструация через</string>
    <string name="unlikely_to_get_pregnant">Малая вероятность \n забеременеть</string>
    <string name="average_probability_of_getting_pregnant">Средняя вероятность \n забеременеть</string>
    <string name="high_probability_of_getting_pregnant">Высокая вероятность \n забеременеть</string>
    <string name="ovulation_after">Овуляция через</string>
    <string name="menstruation">Менструация</string>
    <string name="ovulation">овуляции</string>
    <string name="day">день</string>
    <string name="DAY">ДЕНЬ</string>
    <string name="the_cycle_lasted">Цикл длился</string>
    <string name="forecast_day">Прогноз: день</string>
    //for statistics
    <string name="current_cycle">"Текущий цикл: %1$s - %2$s"</string>
    <string name="cycle">"%1$s - %2$s"</string>
    <string name="length_of_menstruation">"%1$d %1$d.getDayAddition()"</string>
    <string name="length_of_cycle">"%1$d %1$d.getDayAddition()"</string>
    <string name="notes">Заметки</string>
    <string name="done_notes">Готово</string>
    <string name="btn_canceled_menu">Отмена</string>
    <string name="btn_save_menu">Сохранить</string>
    <string name="btn_month">МЕСЯЦ</string>
    <string name="btn_year">ГОД</string>
    <string name="during_cycle">Текущий цикл: </string>


    <!--  Settings strings  -->
    <string name="settings_len_of_cycle">Продолжительность цикла</string>
    <string name="settings_len_of_menstr">Продолжительность месячных</string>
    <plurals name="days">
        <item quantity="one">%1$d день</item>
        <item quantity="few">%1$d дня</item>
        <item quantity="many">%1$d дней</item>
        <item quantity="other">%1$d дней</item>
    </plurals>

    //days for information
    <string name="day_1">день</string>
    <string name="day_2_3_4">дня</string>
    <string name="days">дней</string>

    <string name="deleting_all_notes">Удаляем все заметки</string>
    <string name="cancel">Отмена</string>
    <string name="ru_save">Сохранить</string>
    <string name="remind">Напоминания</string>
    <string name="graphs">Графики и отчеты</string>
    <string name="settings">Настройки</string>
    <string name="rate_us">Оцените нас</string>
    <string name="help_feedback">Помощь и обратная связь</string>
    <string name="delete_all_notes">Удалить все записи</string>
    <string name="about_us">О приложении</string>
    <string name="language">Русский</string>
    <string name="change_language">Сменить язык</string>
    <string name="my_profile">Мой профиль</string>
    <string name="about_app_settings">О приложении</string>
    <string name="notifications">Напоминания</string>
    <string name="womens_calendar">Женский календарь</string>
    <string name="are_you_sure">Вы действительно хотите удалить все записи ?</string>
    <string name="yes_settings">Да</string>
    <string name="no_settings">Нет</string>


    <!-- Languages strings -->
    <string name="languages">Языки</string>
    <string name="english">English</string>
    <string name="russian">Русский</string>
    <string name="spanish">Espanol</string>
    <string name="portuguese">Portugues</string>
    <string name="chinese">中国</string>
    <string name="thai">ไทย</string>
    <string name="vietnamese">Tiếng việt</string>


    <!-- Notifications strings -->/
    <string name="period_notifications">Переодические напоминания</string>
    <string name="start_of_menstruation">Начало менструации</string>
    <string name="end_of_menstruation">Конец менструации</string>
    <string name="ovulation_notification">Овуляция</string>
    <string name="opening_of_fertility_window">Открытие окна фертильности</string>
    <string name="closing_of_fertility_window">Закрытие окна фертильности</string>
    <string name="menstruation_starts_today">Менструация начинается сегодня</string>
    <string name="do_not_forget">Не забудьте отметить окончание менструации</string>
    <string name="do_not_forget_message">Напоминание:\nне забудьте отметить\nокончание менструации!</string>

    Reminder: don't forget to mark the end of your period!
    <string name="open_fertilnost">Открытие фертильности</string>
    <string name="open_fertilnost_today">Сегодня открывается окно фертильности</string>
    <string name="open_fertilnost_today_message">Напоминание:\nсегодня открывается\nокно фертильности!</string>
    <string name="ovulation_notifications">Овуляция</string>
    <string name="ovulation_will_stsrt">Предположительно, овуляция наступит...</string>
    <string name="ovulation_will_stsrt_message">Напоминание:\nпредположительно, овуляция\nнаступит сегодня</string>
    <string name="end_fertilnost">Закрытие окна фертильности</string>
    <string name="window_of_fertilnost_is_closing">Окно фертильности закрывается</string>
    <string name="window_of_fertilnost_is_closing_message">Напоминание:\nокно фертильности\nзакрывается сегодня!</string>
    <string name="time">Время</string>
    <string name="message">Сообщение</string>
    <string name="notification_menstruation_start">Сегодня начнется менструация</string>
    <string name="notification_menstruation_start_message">Напоминание:\nсегодня начнется менструация!</string>


    <!-- months -->
    <string name="october">Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="december">Декабрь</string>
    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="july">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>

    <!-- weekdays -->
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>
    <string name="sunday">Вс</string>

    <!-- Rate us strings -->
    <string name="rate_us_do_you_like">Вам нравится Женкий календарь?</string>
    <string name="rate_us_by_five_stars">Если вам нравится приложение, пожалуйста, поставьте нам 5 звёзд</string>
    <string name="cancel_rate_us">ОТМЕНА</string>
    <string name="call_back_rate_us">ОБРАТНАЯ СВЯЗЬ</string>

    <!-- For average cycle picker -->
    <string name="choose">Выберите</string>
    <string name="banner_ad_unit_id">ca-app-pub-8660591775381486/8529093415</string>
</resources>
